...
    var id: Self { self }

    var key: String { rawValue }

    var title: String {
        switch self {
        case .games: "Games"
        case .shop: "Shop"
        case .help: "Help"
        case .settings: "Settings"
        }
    }

...
